force-app/main/default/objects/test1__c/test1__c.object-meta.xml
<CustomObject>
    <label>test1</label>
    <nameField>
        <label>test1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tests1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>