force-app/main/default/objects/test1__c/fields/numerek__c.field-meta.xml
<CustomField>
    <fullName>numerek__c</fullName>
    <label>numerek</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>