force-app/main/default/objects/test1__c/fields/telefonik__c.field-meta.xml
<CustomField>
    <fullName>telefonik__c</fullName>
    <label>telefonik</label>
    <type>Phone</type>
</CustomField>