force-app/main/default/objects/test1__c/fields/texty__c.field-meta.xml
<CustomField>
    <fullName>texty__c</fullName>
    <label>texty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>